Issue with overflowing text on conversation objects in timeline resolved

--- a/app/react/components/TextWithMentions/TextWithMentions.css
+++ b/app/react/components/TextWithMentions/TextWithMentions.css
@@ -16,7 +16,7 @@
 
 .root p {
   /*display: inline-block;*/
-  white-space: pre;
+  white-space: pre-wrap;
   margin: 0;
   padding: 0;
 }
